# controllers/authControllers.js
@@ -196,6 +196,111 @@ const refreshAccessToken = asyncHandler(
     }
 )
 
+//@desc Forgot password
+//@route POST /api/auth/forgot-password
+//@access public
+
+const forgotPassword = asyncHandler(
+    async(req,res)=>{
+        const {email} = req.body;
+        if(!email){
+            res.status(400);
+            throw new Error("email is mandate!")
+        }
+        const user = await User.findOne({email});
+        if(!user){
+            res.status(400);
+            throw new Error("User not found")
+        }
+        const otp = Math.floor(100000 + Math.random() * 900000).toString();
+        const hashedOTP = await bcrypt.hash(otp,10);
+        user.resetOTP = hashedOTP;
+        user.resetOTPExpire = Date.now() + 10 * 60 * 1000;
+        await user.save();
+        try{
+            await sendEmail(
+                user.email,
+                "Password Reset OTP",
+                ` <h2> Your OTP is: ${otp} </h2> `
+            )
+        }catch(err){
+            throw new Error("Email sending failed!")
+        }
+        res.status(200).json({
+            message:"OTP sent to email"
+        })
+    }
+)
+
+//@desc Reset password
+//@route POST /api/auth/reset-password
+//@access public
+
+const resetPassword = asyncHandler(
+    async(req,res)=>{
+        const {email,newPassword} = req.body;
+        if(!email || !newPassword){
+            res.status(400);
+            throw new Error("All Feilds are mandate!")
+        }
+        const user = await User.findOne({email});
+        if (!user) {
+            res.status(400);
+            throw new Error("User not found");
+        }
+        const hashedPassword = await bcrypt.hash(newPassword,10);
+        user.password = hashedPassword;
+
+        user.resetOTP = undefined;
+        user.resetOTPExpire = undefined;
+
+        await user.save();
+        try{
+            await sendEmail(
+                user.email,
+                "Password changed",
+                ` <h2> Password reset successful </h2> `
+            )
+        }catch(err){
+            throw new Error("Email sending failed!")
+        }
+        res.status(200).json({message:"password reset successful"})
+    }
+)
+
+//@desc Verify OTP
+//@route POST /api/auth/verify-otp
+//@access public
+
+const verifyOTP = asyncHandler(async (req, res) => {
+    const { email, otp } = req.body;
+
+    if (!email || !otp) {
+        res.status(400);
+        throw new Error("Email and OTP required");
+    }
+
+    const user = await User.findOne({ email });
+
+    if (!user || !user.resetOTP || !user.resetOTPExpire) {
+        res.status(400);
+        throw new Error("Invalid request");
+    }
+
+    if (user.resetOTPExpire < Date.now()) {
+        res.status(400);
+        throw new Error("OTP expired");
+    }
+
+    const isMatch = await bcrypt.compare(otp, user.resetOTP);
+
+    if (!isMatch) {
+        res.status(400);
+        throw new Error("Invalid OTP");
+    }
+
+    res.status(200).json({ message: "OTP verified" });
+});
 
 
-module.exports = {registerUser,loginUser,refreshAccessToken}
+module.exports = {registerUser,loginUser,refreshAccessToken,forgotPassword,resetPassword,verifyOTP}
